unpackaged/main/default/objects/legaldeskapp__LegalDesk_Admin_Setting__mdt/legaldeskapp__LegalDesk_Admin_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Streamline AI Admin Setting</label>
    <pluralLabel>Streamline AI Admin Settings</pluralLabel>
</CustomObject>