unpackaged/main/default/objects/legaldeskapp__LegalDesk_Admin_Setting__mdt/fields/legaldeskapp__Hours_Auth_Token_Will_Expire_In__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Hours_Auth_Token_Will_Expire_In__c</fullName>
    <label>Hours Auth Token Will Expire In</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>