unpackaged/main/default/objects/legaldeskapp__LegalDesk_Admin_Setting__mdt/fields/legaldeskapp__Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Last_Sync_Date__c</fullName>
    <label>Last Sync Date</label>
    <type>Date</type>
</CustomField>