unpackaged/main/default/objects/legaldeskapp__LegalDesk_Admin_Setting__mdt/fields/legaldeskapp__Mass_Create_Object__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Mass_Create_Object__c</fullName>
    <label>Mass Create Object</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>