unpackaged/main/default/objects/legaldeskapp__LegalDesk_Admin_Setting__mdt/fields/legaldeskapp__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>