unpackaged/main/default/objects/legaldeskapp__LegalDesk_Admin_Setting__mdt/fields/legaldeskapp__Old_Rule_Custom_Metadata_Records__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Old_Rule_Custom_Metadata_Records__c</fullName>
    <label>Old Rule Custom Metadata Records</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>