unpackaged/main/default/objects/legaldeskapp__LegalDesk_Admin_Setting__mdt/fields/legaldeskapp__Request_Type__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Request_Type__c</fullName>
    <label>Request Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>