unpackaged/main/default/objects/legaldeskapp__LegalDesk_Admin_Setting__mdt/fields/legaldeskapp__Run_Trigger__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Run_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Trigger</label>
    <type>Checkbox</type>
</CustomField>