unpackaged/main/default/objects/legaldeskapp__LegalDesk_Admin_Setting__mdt/fields/legaldeskapp__StreamLineAIURL__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__StreamLineAIURL__c</fullName>
    <description>Referenced in LegalDesk_Log__c.Email_Template_Message__c field to provide the web app URL dynamically.</description>
    <label>StreamLineAIURL</label>
    <type>Url</type>
</CustomField>