unpackaged/main/default/objects/legaldeskapp__LegalDesk_Admin_Setting__mdt/fields/legaldeskapp__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Timestamp__c</fullName>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>