unpackaged/main/default/objects/legaldeskapp__LegalDesk_Admin_Setting__mdt/fields/legaldeskapp__Type__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Object</fullName>
                <default>true</default>
                <label>Object</label>
            </value>
            <value>
                <fullName>Email Address</fullName>
            </value>
            <value>
                <fullName>Account Trigger</fullName>
            </value>
            <value>
                <fullName>Opportunity Trigger</fullName>
            </value>
            <value>
                <fullName>Campaign Trigger</fullName>
            </value>
            <value>
                <fullName>Deployment Trigger</fullName>
            </value>
            <value>
                <fullName>Auth Token</fullName>
            </value>
            <value>
                <fullName>Bidirectional Trigger</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Old Rule Ids</fullName>
            </value>
            <value>
                <fullName>Scheduled Mass Create</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>